--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "botwaMD",
+  "name": "HexzkryMd",
   "description": "Bot Wa Full fitur",
   "repository": "https://github.com/arivpns/arivpns",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
